2011-03-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_valve_surface.m: v0.3

	- Add 'mba' interpolation, that makes use of the new MEX-file
	mba_surface_interpolation.cpp to provide Multilevel B-Spline
	Approximation interpolation.

	-Use 'natural' option for TriScatteredInterp(), so that the
	interpolant is smoother.

	* Add matlab/PointsToolbox/mba_surface_interpolation.cpp,
	matlab/PointsToolbox/mba_surface_interpolation.m:

	- MBA_SURFACE_INTERPOLATION Scattered data Multilevel B-spline
	interpolation.

2011-03-18  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add engopts.sh:

	- Matlab's configuration file modified so that we can compile and
	link PointsToolbox/mba_surface_interpolation doing

	>> mex -v -largeArrayDims -outdir PointsToolbox/ -f ./engopts.sh PointsToolbox/mba_surface_interpolation.cpp

2011-03-16  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* CardiacToolbox/scinrrd_valve_surface.m: v0.2

	- Add 'gridfit' option to interpolate (actually, approximate)
	using John D'Errico's gridfit() function.

	- Add 'tsi' option to interpolate using Matlab's
	TriScatteredInterp() function.

	* Add ThirdPartyToolbox/gridfit.m: v2.0

	- By John D'Errico

	- estimates a surface on a 2d grid, based on scattered data
	Replicates are allowed. All methods extrapolate to the grid
	boundaries. Gridfit uses a modified ridge estimator to generate
	the surface, where the bias is toward smoothness.
 
        Gridfit is not an interpolant. Its goal is a smooth surface that
	approximates your data, but allows you to control the amount of
	smoothing.

	* Add ThirdPartyToolbox/L2_distance.m

	- L2_DISTANCE - computes Euclidean distance matrix

	- By Roland Bunschoten

	- Requirement of the isomap functions.

2011-03-15  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>

	* Add ThirdPartyToolbox/Isomap.m, ThirdPartyToolbox/IsomapII.m

	- Add modified code from Josh Tenenbaum, to compute Isomap