@@ -1,5 +1,10 @@
 2011-03-19  Ramon Casero  <ramon.casero@comlab.ox.ac.uk>
 
+	* FileFormatToolbox/scinrrd_save.m:
+
+	- Add a note to the help header about a spurious warning message
+	that Matlab gives when trying to save a very large volume.
+
 	* CardiacToolbox/scinrrd_valve_surface.m: v0.3
 
 	- Add 'mba' interpolation, that makes use of the new MEX-file
